--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fluxo Bestie</title>
     
-    <meta name="google-site-verification" content="N4CrrgZlzmzXVg4-2orsWLM_BBrM7mzN2IXwcGOCthc" />
+    <meta name="google-site-verification" content="38jj8oGLJMQZ9TeG3CTdzm10qMjLQNBhwCEaGosi7Qc" />
+    <meta name="google-site-verification" content="google6d627cd568ac3ac1" />
 
     <meta name="google-adsense-account" content="ca-pub-7111542453955830">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7111542453955830" crossorigin="anonymous"></script>
@@ -13,18 +14,15 @@
     <meta name="description" content="Fluxo-Bestie Project" />
     <meta name="author" content="Satyam Prabhat" />
     <meta property="og:title" content="Fluxo Bestie" />
-    <meta property="og:description" content="Fluxo-Bestie Project" />
     <meta property="og:type" content="website" />
 
     <style>
       .lovable-badge, #lovable-tagger, [class*="lovable"], [id*="lovable"], 
-      div[style*="z-index: 2147483647"], iframe[src*="lovable"] {
+      div[style*="z-index: 2147483647"] {
         display: none !important;
         visibility: hidden !important;
         opacity: 0 !important;
         pointer-events: none !important;
-        width: 0 !important;
-        height: 0 !important;
       }
     </style>
   </head>
